--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tailwindcss": "^3.2.4",
-    "@tailwindcss/typography": "^0.5.1"
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.1",
+    "tailwindcss": "^3.2.4"
   }
 }
